refactor(test): update AlertServiceTest to use AlertStatus enum and AlertResponseDTO